crates/kjarni-ffi/dist/include/kjarni.h

/**
 * Error codes returned by Kjarni FFI functions.
 */
typedef enum KjarniErrorCode {
  /**
   * Operation completed successfully
   */
  KJARNI_ERROR_CODE_OK = 0,
  /**
   * Null pointer passed to function
   */
  KJARNI_ERROR_CODE_NULL_POINTER = 1,
  /**
   * Invalid UTF-8 string
   */
  KJARNI_ERROR_CODE_INVALID_UTF8 = 2,
  /**
   * Model not found in registry
   */
  KJARNI_ERROR_CODE_MODEL_NOT_FOUND = 3,
  /**
   * Failed to load model
   */
  KJARNI_ERROR_CODE_LOAD_FAILED = 4,
  /**
   * Inference operation failed
   */
  KJARNI_ERROR_CODE_INFERENCE_FAILED = 5,
  /**
   * GPU not available
   */
  KJARNI_ERROR_CODE_GPU_UNAVAILABLE = 6,
  /**
   * Invalid configuration
   */
  KJARNI_ERROR_CODE_INVALID_CONFIG = 7,
  /**
   * Operation was cancelled
   */
  KJARNI_ERROR_CODE_CANCELLED = 8,
  /**
   * Operation timed out
   */
  KJARNI_ERROR_CODE_TIMEOUT = 9,
  /**
   * Stream has ended
   */
  KJARNI_ERROR_CODE_STREAM_ENDED = 10,
  /**
   * A panic in the engine was caught at the ABI boundary. The library is in an
   * unspecified state for the operation that failed; the handle itself remains
   * valid to free. `kjarni_last_error_message` names the entry point.
   */
  KJARNI_ERROR_CODE_PANIC = 11,
  /**
   * Unknown error
   */
  KJARNI_ERROR_CODE_UNKNOWN = 255,
} KjarniErrorCode;
/**
 * Device selection for inference.
 */
typedef enum KjarniDevice {
  /**
   * Use CPU for inference
   */
  KJARNI_DEVICE_CPU = 0,
  /**
   * Use GPU for inference
   */
  KJARNI_DEVICE_GPU = 1,
} KjarniDevice;
/**
 * Opaque handle to a Classifier.
 */
typedef struct KjarniClassifier KjarniClassifier;
/**
 * Opaque handle to a Reranker
 */
typedef struct KjarniReranker KjarniReranker;
/**
 * Single classification result (label + score).
 */
typedef struct KjarniClassResult {
  char *label;
  float score;
} KjarniClassResult;
typedef struct KjarniClassResults {
  struct KjarniClassResult *results;
  uintptr_t len;
} KjarniClassResults;
typedef struct KjarniClassifierConfig {
  /**
   * Device to use
   */
  enum KjarniDevice device;
  /**
   * Cache directory (NULL = default)
   */
  const char *cache_dir;
  /**
   * Model name (NULL = default)
   */
  const char *model_name;
  /**
   * Model path (NULL = use registry)
   */
  const char *model_path;
  /**
   * Custom labels (NULL = use model labels)
   */
  const char *const *labels;
  /**
   * Number of custom labels
   */
  uintptr_t num_labels;
  /**
   * Multi-label mode (1 = multi-label, 0 = single-label)
   */
  int32_t multi_label;
  /**
   * Suppress output
   */
  int32_t quiet;
} KjarniClassifierConfig;
/**
 * Single rerank result
 */
typedef struct KjarniRerankResult {
  uintptr_t index;
  float score;
} KjarniRerankResult;
/**
 * Array of rerank results
 */
typedef struct KjarniRerankResults {
  struct KjarniRerankResult *results;
  uintptr_t len;
} KjarniRerankResults;
/**
 * Configuration for Reranker
 */
typedef struct KjarniRerankerConfig {
  enum KjarniDevice device;
  const char *cache_dir;
  const char *model_name;
  const char *model_path;
  int32_t quiet;
} KjarniRerankerConfig;
/**
 * Get the library version string.
 */
const char *kjarni_version(void);
/**
 * Create a new Classifier.
 *
 * # Safety
 * - `config` must be valid or NULL
 * - `out` must be a valid pointer
 * - The returned handle must be freed with `kjarni_classifier_free`
 */
enum KjarniErrorCode kjarni_classifier_new(const struct KjarniClassifierConfig *config,
                                           struct KjarniClassifier **out);
/**
 * Free a Classifier.
 *
 * # Safety
 *
 * - `classifier` must be null, or a handle returned by `kjarni_classifier_new` that has not
 *   already been passed to this function. It is invalid to use afterwards.
 */
void kjarni_classifier_free(struct KjarniClassifier *classifier);
/**
 * Classify a single text.
 *
 * # Safety
 *
 * - `classifier` must be null, or a live handle returned by `kjarni_classifier_new` that has
 *   not been freed.
 * - `text` must be null, or a valid pointer to a nul-terminated C string.
 * - `out` must be a valid, writable pointer to a `KjarniClassResults`. On `KJARNI_OK` it
 *   receives a value the caller owns and must release with the matching `*_free`; on
 *   failure it is either cleared or left unmodified, and must not be read.
 */
enum KjarniErrorCode kjarni_classifier_classify(struct KjarniClassifier *classifier,
                                                const char *text,
                                                struct KjarniClassResults *out);
/**
 * Get number of labels.
 *
 * # Safety
 *
 * - `classifier` must be null, or a live handle returned by `kjarni_classifier_new` that has
 *   not been freed.
 */
uintptr_t kjarni_classifier_num_labels(const struct KjarniClassifier *classifier);
/**
 * Get the last error message. Returns NULL if no error.
 */
const char *kjarni_last_error_message(void);
/**
 * Get default reranker configuration
 */
struct KjarniRerankerConfig kjarni_reranker_config_default(void);
/**
 * Create a new Reranker
 *
 * # Safety
 *
 * - `out` must be null, or a live handle returned by `kjarni_reranker_new` that has not been
 *   freed.
 */
enum KjarniErrorCode kjarni_reranker_new(const struct KjarniRerankerConfig *config,
                                         struct KjarniReranker **out);
/**
 * Free a Reranker
 *
 * # Safety
 *
 * - `reranker` must be null, or a handle returned by `kjarni_reranker_new` that has not
 *   already been passed to this function. It is invalid to use afterwards.
 */
void kjarni_reranker_free(struct KjarniReranker *reranker);
/**
 * Score a single query-document pair
 *
 * # Safety
 *
 * - `reranker` must be null, or a live handle returned by `kjarni_reranker_new` that has not
 *   been freed.
 * - `query` must be null, or a valid pointer to a nul-terminated C string.
 * - `document` must be null, or a valid pointer to a nul-terminated C string.
 * - `out` must be a valid, writable pointer to a `c_float`. It is written on both success and
 *   failure, and any buffers it receives are owned by the caller.
 */
enum KjarniErrorCode kjarni_reranker_score(struct KjarniReranker *reranker,
                                           const char *query,
                                           const char *document,
                                           float *out);
/**
 * Rerank documents by relevance to query
 *
 * # Safety
 *
 * - `reranker` must be null, or a live handle returned by `kjarni_reranker_new` that has not
 *   been freed.
 * - `query` must be null, or a valid pointer to a nul-terminated C string.
 * - `documents` must point to `num_docs` readable pointers, each null or a valid
 *   nul-terminated C string that stays valid for the call.
 * - `out` must be a valid, writable pointer to a `KjarniRerankResults`. On `KJARNI_OK` it
 *   receives a value the caller owns and must release with the matching `*_free`; on
 *   failure it is either cleared or left unmodified, and must not be read.
 */
enum KjarniErrorCode kjarni_reranker_rerank(struct KjarniReranker *reranker,
                                            const char *query,
                                            const char *const *documents,
                                            uintptr_t num_docs,
                                            struct KjarniRerankResults *out);
/**
 * Rerank and return top-k results
 *
 * # Safety
 *
 * - `reranker` must be null, or a live handle returned by `kjarni_reranker_new` that has not
 *   been freed.
 * - `query` must be null, or a valid pointer to a nul-terminated C string.
 * - `documents` must point to `num_docs` readable pointers, each null or a valid
 *   nul-terminated C string that stays valid for the call.
 * - `out` must be a valid, writable pointer to a `KjarniRerankResults`. On `KJARNI_OK` it
 *   receives a value the caller owns and must release with the matching `*_free`; on
 *   failure it is either cleared or left unmodified, and must not be read.
 */
enum KjarniErrorCode kjarni_reranker_rerank_top_k(struct KjarniReranker *reranker,
                                                  const char *query,
                                                  const char *const *documents,
                                                  uintptr_t num_docs,
                                                  uintptr_t top_k,
                                                  struct KjarniRerankResults *out);