crates/kjarni-ffi/bindings/csharp/kjarni/Native.cs


        [DllImport(LibName, CallingConvention = CallingConvention.Cdecl)]
        public static extern KjarniError kjarni_classifier_new(
            ref KjarniClassifierConfig config,
            out IntPtr handle);

        [DllImport(LibName, CallingConvention = CallingConvention.Cdecl)]
        public static extern void kjarni_classifier_free(IntPtr handle);

        [DllImport(LibName, CallingConvention = CallingConvention.Cdecl)]
        public static extern KjarniError kjarni_classifier_classify(
            IntPtr handle,
            [MarshalAs(UnmanagedType.LPUTF8Str)] string text,
            out KjarniClassResults result);

        [DllImport(LibName, CallingConvention = CallingConvention.Cdecl)]
        public static extern UIntPtr kjarni_classifier_num_labels(IntPtr handle);

        // Reranker
        [DllImport(LibName, CallingConvention = CallingConvention.Cdecl)]
        public static extern KjarniRerankerConfig kjarni_reranker_config_default();

        [DllImport(LibName, CallingConvention = CallingConvention.Cdecl)]
        public static extern KjarniError kjarni_reranker_new(
            ref KjarniRerankerConfig config,
            out IntPtr handle);

        [DllImport(LibName, CallingConvention = CallingConvention.Cdecl)]
        public static extern void kjarni_reranker_free(IntPtr handle);

        [DllImport(LibName, CallingConvention = CallingConvention.Cdecl)]
        public static extern KjarniError kjarni_reranker_score(
            IntPtr handle,
            [MarshalAs(UnmanagedType.LPUTF8Str)] string query,
            [MarshalAs(UnmanagedType.LPUTF8Str)] string document,
            out float result);

        [DllImport(LibName, CallingConvention = CallingConvention.Cdecl)]
        public static extern KjarniError kjarni_reranker_rerank(
            IntPtr handle,
            [MarshalAs(UnmanagedType.LPUTF8Str)] string query,
            [MarshalAs(UnmanagedType.LPArray, ArraySubType = UnmanagedType.LPUTF8Str)] string[] documents,
            UIntPtr numDocs,
            out KjarniRerankResults result);

        [DllImport(LibName, CallingConvention = CallingConvention.Cdecl)]
        public static extern KjarniError kjarni_reranker_rerank_top_k(
            IntPtr handle,
            [MarshalAs(UnmanagedType.LPUTF8Str)] string query,
            [MarshalAs(UnmanagedType.LPArray, ArraySubType = UnmanagedType.LPUTF8Str)] string[] documents,
            UIntPtr numDocs,
            UIntPtr topK,
            out KjarniRerankResults result);

        // =================================================================
        // Helpers
        // =================================================================

        public static void CheckError(KjarniError err)
        {
            if (err != KjarniError.Ok)
            {
                var msgPtr = kjarni_last_error_message();
                var msg = msgPtr != IntPtr.Zero
                    ? Marshal.PtrToStringUTF8(msgPtr)
                    : $"Error: {err}";
                throw new KjarniException(msg ?? "Unknown error", err);
            }
        }

        public static string GetVersion()
        {
            var ptr = kjarni_version();
            return ptr != IntPtr.Zero ? Marshal.PtrToStringUTF8(ptr) ?? "unknown" : "unknown";
        }
    }

    public class KjarniException : Exception
    {
        public Native.KjarniError ErrorCode { get; }

        public KjarniException(string message, Native.KjarniError code)
            : base(message)
        {
            ErrorCode = code;
        }
    }
}